--- a/MFD_TCS.ipynb
+++ b/MFD_TCS.ipynb
@@ -320,7 +320,7 @@
    "source": [
     "for d in range(Sim_day):\n",
     "    start=time.time()\n",
-    "    vehicle_information, time_list, Accumulation, Speed=within_day_process(Departure_time,trip_len,Number_of_user)\n",
+    "    vehicle_information, time_list, Accumulation, Speed=within_day_process(Departure_time,trip_len,Number_of_user,k)\n",
     "\n",
     "    Acc_df['d'+str(d)]=Accumulation\n",
     "    time_label['d'+str(d)]=time_list.tolist()\n",
