--- a/MFD_TCS.ipynb
+++ b/MFD_TCS.ipynb
@@ -37,74 +37,98 @@
     "\n",
     "# Event-based simulation, reffering to Algorithm 1 in the paper\n",
     "def within_day_process(Departure_time,trip_len,Number_of_user,k):\n",
+    "    # Step 1\n",
+    "    n=0 # Number of vehicle (accumulation)\n",
+    "    j=0 # index of event\n",
+    "    t=[] # event time\n",
+    "    vehicle_index=[]\n",
+    "    Accumulation=[]\n",
+    "    Speed=[]\n",
+    "    \n",
+    "    # Predicted arrival time\n",
     "    Arrival_time=Departure_time+trip_len/9.78/60\n",
+    "    \n",
+    "    # Step 2\n",
+    "    # Define event list of departures\n",
     "    Event_list1=pd.DataFrame()\n",
     "    Event_list1['time(min)']=np.array(Departure_time)\n",
     "    Event_list1['event']=np.array(['departure']*Number_of_user)\n",
     "    Event_list1['trip_len(m)']=trip_len\n",
+    "    \n",
+    "    # Define event list of arrivals\n",
     "    Event_list2=pd.DataFrame()\n",
     "    Event_list2['time(min)']=np.array(Arrival_time)\n",
     "    Event_list2['event']=np.array(['arrival']*Number_of_user)\n",
     "    Event_list2['trip_len(m)']=trip_len\n",
+    "    \n",
+    "    # Concatenate these two event lists\n",
     "    Event_list = pd.concat([Event_list1,Event_list2])\n",
+    "    \n",
+    "    # Sort the list by time in ascending order\n",
     "    S_Event_list=Event_list.sort_values(by = ['time(min)'],ascending = True)\n",
     "    S_Event_list['veh_index'] = S_Event_list.index\n",
-    "    n=0 # Number of vehicle (accumulation)\n",
-    "    j=0 # index of event\n",
+    "    \n",
+    "    # get time of the first event\n",
+    "    t.append(S_Event_list['time(min)'].iloc[0]) #initial time\n",
+    "    \n",
+    "    # create a dataframe to store the information of each agent\n",
     "    vehicle_information=pd.DataFrame({'vehicle':range(Number_of_user),'trip_len(m)':trip_len,'t_exp':np.zeros(Number_of_user)\\\n",
     "                                     ,'account':np.zeros(Number_of_user)})\n",
-    "    t=[] # event time\n",
-    "    t.append(S_Event_list['time(min)'].iloc[0]) #initial time\n",
-    "    vehicle_index=[]\n",
-    "    Accumulation=[]\n",
-    "    Speed=[]\n",
+    "    \n",
     "    vehicle_information['account']=I-custgauss(Departure_time,**params)*Event_list1['trip_len(m)']*k\n",
+    "    \n",
+    "    #Step 3\n",
+    "    # Event-based simulation\n",
     "    while S_Event_list.empty==False:\n",
     "        j=j+1\n",
-    "        t.append(S_Event_list['time(min)'].iloc[0])\n",
+    "        t.append(S_Event_list['time(min)'].iloc[0]) # record the time of the event\n",
     "        if S_Event_list['event'].iloc[0]=='departure':     \n",
-    "            vehicle_index.append(S_Event_list[(S_Event_list['time(min)']==t[j])].index.values[0])\n",
+    "            vehicle_index.append(S_Event_list[(S_Event_list['time(min)']==t[j])].index.values[0]) # record the agent that starts the trip\n",
     "\n",
+    "            # update the untraveled trip length\n",
     "            trip_len1=vehicle_information['trip_len(m)'].to_numpy()\n",
     "            trip_len1[vehicle_index[0:-1]]=trip_len1[vehicle_index[0:-1]]-V(n)*60*(t[j]-t[j-1])\n",
     "            vehicle_information['trip_len(m)']=trip_len1\n",
     "\n",
+    "            # update the accumulation in the network\n",
     "            n=n+1\n",
+    "            \n",
+    "            # keep track of the accumulation\n",
     "            Accumulation.append(n)\n",
     "            vehicle_information.loc[vehicle_index[-1],'t_ins']=trip_len1[vehicle_index[-1]]/V(n)/60\n",
-    "            \n",
     "\n",
+    "            # update the predicted arrival time\n",
     "            S_Event_list.loc[(S_Event_list['event']=='arrival') & (S_Event_list['veh_index'].isin(vehicle_index[0:-1])),'time(min)']=\\\n",
     "            t[j]+vehicle_information.loc[vehicle_index[0:-1],'trip_len(m)']/V(n)/60\n",
     "\n",
-    "            S_Event_list.loc[(S_Event_list['event']=='arrival') & (S_Event_list['veh_index'].isin(list(set(S_Event_list['veh_index'].values).difference(set(vehicle_index[0:-1]))))),'time(min)']=\\\n",
-    "            Event_list1['time(min)'].values[list(set(S_Event_list['veh_index'].values).difference(set(vehicle_index[0:-1])))]+\\\n",
-    "            vehicle_information.loc[list(set(S_Event_list['veh_index'].values).difference(set(vehicle_index[0:-1]))),'trip_len(m)']/V(n)/60\n",
-    "\n",
-    "        else:\n",
+    "        else: #arrival\n",
+    "            # update the trip length\n",
     "            trip_len1=vehicle_information['trip_len(m)'].values\n",
     "            trip_len1[vehicle_index]=trip_len1[vehicle_index]-V(n)*60*(t[j]-t[j-1])\n",
     "            vehicle_information['trip_len(m)']=trip_len1\n",
     "\n",
+    "            # update the accumulation in the network\n",
     "            n=n-1\n",
+    "            \n",
+    "            # keep track of the accumulation\n",
     "            Accumulation.append(n)\n",
     "\n",
+    "            # update t_exp\n",
     "            vehicle_information.at[S_Event_list['veh_index'].iloc[0],'t_exp']=\\\n",
     "            S_Event_list.at[S_Event_list['veh_index'].iloc[0],'time(min)']-\\\n",
     "            Departure_time[S_Event_list['veh_index'].iloc[0]]\n",
-    "    #         Event_list1.loc[S_Event_list['veh_index'].iloc[0],'time(min)']\n",
     "\n",
+    "            # remove the agent that finishes the trip\n",
     "            vehicle_index.remove(S_Event_list[0:1].index.values[0])\n",
     "        \n",
+    "            # Update the predicted arrival time\n",
     "            S_Event_list.loc[(S_Event_list['event']=='arrival') & (S_Event_list['veh_index'].isin(vehicle_index)),'time(min)']=\\\n",
     "            t[j]+vehicle_information.loc[vehicle_index,'trip_len(m)']/V(n)/60\n",
     "\n",
-    "            S_Event_list.loc[(S_Event_list['event']=='arrival') & (S_Event_list['veh_index'].isin(list(set(range(Number_of_user)).difference(set(vehicle_index))))),'time(min)']=\\\n",
-    "            Event_list1.loc[list(set(range(Number_of_user)).difference(set(vehicle_index)))]['time(min)']+\\\n",
-    "            vehicle_information.loc[list(set(range(Number_of_user)).difference(set(vehicle_index))),'trip_len(m)']/V(n)/60\n",
-    "\n",
+    "        # remove event from the list\n",
     "        S_Event_list = S_Event_list.iloc[1:]    \n",
     "        S_Event_list=S_Event_list.sort_values(by = ['time(min)'],ascending = True)\n",
+    "        # update speed with Speed.function\n",
     "        Speed.append(V(n))\n",
     "    vehicle_information['t_dep']=Event_list1['time(min)']\n",
     "    vehicle_information['t_arr']=vehicle_information['t_dep']+vehicle_information['t_exp']\n",
@@ -149,46 +173,71 @@
     "\n",
     "@njit\n",
     "def V1(x):\n",
-    "    return np.square(1-x/4500)*9.78\n",
+    "    return np.square(1-x/4500)*9.78"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the expected (texp) travel time at unchosen departure time point using fictional travelers\n",
     "\n",
+    "# First, create a function to compute the expected tt at a given departure time point\n",
+    "# In a nutshell, we need to compute the speeds of the MFD (time varying) while the fictinoal dirver travels the network, given its trip length. We then can obtain the travel time.\n",
+    "# These speeds can change as they are function \n",
     "\n",
-    "# travel time experienced by fictional users\n",
     "@njit\n",
     "def fic_tt(user, time_point, all_time_matrix, new_timelist, trip_len, Accumulation,Number_of_user):\n",
+    "    \n",
+    "    # get the fictional departure time for the fictional traveler\n",
     "    star_time=all_time_matrix[user,time_point]\n",
+    "    \n",
+    "    # get the list of events happening after this given departure time point to simulate the expected states\n",
     "    known_list=new_timelist[new_timelist>star_time]\n",
-    "    if len(known_list)==0: # depart after all real travelers leave\n",
+    "    \n",
+    "    if len(known_list)==0: # if this fictional departure happens after all real travelers\n",
+    "        # exit the network assuming free flow speed (9.78)\n",
     "        texp=trip_len[user]/9.78/60\n",
-    "    elif len(known_list)==Number_of_user*2: # depart before all real travelers start\n",
+    "    elif len(known_list)==Number_of_user*2: # this fictional departure happens before all real travelers enter the network\n",
+    "        # compute the left trip length till the first real traveler enter the network\n",
     "        texp=0\n",
     "        count=0\n",
     "        left_len=trip_len[user]-9.78*60*(known_list[0]-star_time)\n",
-    "        if left_len<0:\n",
+    "        \n",
+    "        if left_len<0: # if this fictional traveler end his trip before the first real traveler enter the network\n",
+    "            # exit the network assuming free flow speed (9.78)\n",
     "            texp=trip_len[user]/9.78/60\n",
-    "        else:\n",
+    "            \n",
+    "        else: # compute travel speed in each time interval between two consecutive events\n",
     "            V_list=np.array([V1(x) for x in Accumulation[Number_of_user*2-len(known_list):-1]])\n",
-    "            len_piece=np.diff(known_list)*V_list*60\n",
+    "            len_piece=np.diff(known_list)*V_list*60 # trip length traveled in each time interval between two consecutive events\n",
     "            cum_len=np.cumsum(len_piece)\n",
     "            count=np.sum(cum_len<left_len)\n",
     "            texp=known_list[count+1]-star_time+(left_len-cum_len[count])/V1(Accumulation[count])/60\n",
-    "    else:\n",
+    "    else: # it means this fictional departure happens after some real travelers have entered the network\n",
     "        texp=0\n",
     "        count=0\n",
+    "        # compute the left trip length till the next closest event occurs (either a departure or arrival)\n",
     "        left_len=trip_len[user]-V1(Accumulation[Number_of_user*2-len(known_list)-1])*(known_list[0]-star_time)*60\n",
-    "        if left_len<0:\n",
+    "        if left_len<0: # if this fictional traveler end his trip before the next real event occurs\n",
     "            texp=trip_len[user]/V1(Accumulation[Number_of_user*2-len(known_list)-1])/60\n",
     "        else:\n",
+    "            # travel speed in each time interval between two consecutive events\n",
     "            V_list=np.array([V1(x) for x in Accumulation[Number_of_user*2-len(known_list):-1]])\n",
+    "            \n",
+    "            # trip length traveled in each time interval between two consecutive events\n",
     "            len_piece=np.diff(known_list)*V_list*60\n",
     "            cum_len=np.cumsum(len_piece)\n",
     "            count=np.sum(cum_len<left_len)\n",
-    "            if count==len(cum_len):\n",
+    "            if count==len(cum_len): # this fictional traveler's is not finished even after all real travelers finish their trips\n",
     "                texp=known_list[count]-star_time+(left_len-cum_len[count-1])/9.78/60\n",
-    "            else:\n",
+    "            else: # this fictional traveler finishes the trip before all real travelers finish their trips\n",
     "                texp=known_list[count+1]-star_time+(left_len-cum_len[count])/V1(Accumulation[Number_of_user*2-len(known_list)+count])/60\n",
     "    return texp\n",
     "\n",
-    "\n",
+    "# Then we use the following function to store the fictional tt for every possible departure times\n",
     "@njit(parallel=True)\n",
     "def T_est(all_time_matrix, new_timelist, trip_len, Accumulation, Number_of_user, tao):\n",
     "    T_estimate_array=np.zeros((Number_of_user,2*tao+1))\n",
@@ -213,7 +262,9 @@
    "source": [
     "np.random.seed(seed=59)\n",
     "tao=30 # number of time intervals\n",
-    "Number_of_user=3000\n",
+    "Number_of_user=3700\n",
+    "\n",
+    "# Generate the inital distributions for departure time\n",
     "Departure_time=np.random.normal(80,18,Number_of_user)\n",
     "for i in range(len(Departure_time)):\n",
     "    if Departure_time[i]<20 or Departure_time[i]>150:\n",
@@ -228,13 +279,14 @@
    "outputs": [],
    "source": [
     "trip_len=np.array(np.zeros(Number_of_user))\n",
-    "E=np.array(np.zeros(Number_of_user)) # schedule delay early penalty\n",
-    "L=np.array(np.zeros(Number_of_user)) # schedule delay late penalty\n",
-    "\n",
     "for i in range(Number_of_user):\n",
     "    trip_len[i]=4600+np.random.normal(0,(0.02*4600)**2)\n",
     "    while trip_len[i]<20:\n",
     "        trip_len[i]=4600+np.random.normal(0,(0.02*4600)**2)\n",
+    "\n",
+    "# Generate the sde and sdl\n",
+    "E=np.array(np.zeros(Number_of_user)) # schedule delay early penalty\n",
+    "L=np.array(np.zeros(Number_of_user)) # schedule delay late penalty\n",
     "        \n",
     "Wished_Arrival_time=Departure_time+trip_len/9.78/60 # wished arrival time\n",
     "\n",
@@ -245,7 +297,8 @@
     "        E[i]=0.5+np.random.normal(0.05**2,0.1**2)\n",
     "    while L[i]<2.5 or L[i]>5.5:\n",
     "        L[i]=4+np.random.normal(0.1**2,0.4**2)\n",
-    "        \n",
+    "\n",
+    "# departure time choice set \n",
     "Dep_time_set=pd.DataFrame()\n",
     "for i in range(2*tao+1):\n",
     "    Dep_time_set['t'+str(i)]=Departure_time-tao+i"
@@ -276,12 +329,12 @@
    "outputs": [],
    "source": [
     "Sim_day=50\n",
-    "omega=0.7\n",
-    "norm_list=[]\n",
-    "Acc_df=pd.DataFrame()\n",
-    "time_label=pd.DataFrame()\n",
+    "omega=0.7 # Learning rate\n",
+    "norm_list=[] # record the changes of the norm, which is the indicator of the consistency\n",
+    "Acc_df=pd.DataFrame() # record the accumulation on each day\n",
+    "time_label=pd.DataFrame() # time points of the events on each day\n",
     "all_time_slot=pd.DataFrame()\n",
-    "cost_list=[]\n",
+    "cost_list=[] # generalized cost, including cost of travel time, schedule delay and credit payment\n",
     "cs_list=[]\n",
     "price=np.ones(1)*0 # initial price as 0\n",
     "b=0.0002 #price adjustment parameter \n",
@@ -297,7 +350,7 @@
     "\n",
     "acco=[]\n",
     "all_time_matrix=np.array(all_time_slot)\n",
-    "utility={}\n",
+    "utility={} # record the random utility of each departure time choice on each day\n",
     "\n",
     "# choose a case to simulate\n",
     "Base_Case=False\n",
@@ -320,6 +373,7 @@
    "source": [
     "for d in range(Sim_day):\n",
     "    start=time.time()\n",
+    "    # record the output at each day\n",
     "    vehicle_information, time_list, Accumulation, Speed=within_day_process(Departure_time,trip_len,Number_of_user,k)\n",
     "\n",
     "    Acc_df['d'+str(d)]=Accumulation\n",
@@ -331,30 +385,39 @@
     "    \n",
     "    new_timelist=np.array(time_list)\n",
     "    \n",
+    "    # compute the estimated travel time at unchosen departure time points\n",
     "    T_estimate=T_est(all_time_matrix, new_timelist, trip_len, Accumulation, Number_of_user, tao)\n",
     "    T_estimated=pd.DataFrame(T_estimate,columns=('t'+str(i) for i in range(2*tao+1)))\n",
     "\n",
     "    T_estimated_diff=pd.DataFrame()\n",
     "    for j in range(2*tao+1):\n",
     "        T_estimated_diff['t'+str(j)]=T_estimated['t'+str(j)]+all_time_slot['t'+str(j)]-Wished_Arrival_time\n",
-    "\n",
+    "    \n",
+    "    # compute the deviation of between the actual (or estimated) arrival time and the wished arrival time\n",
+    "    T_diff=np.array(T_estimated_diff)\n",
+    "    # compute the schedule delay\n",
+    "    SD=schedule_delay(T_diff)\n",
+    "    \n",
+    "    # compute the generalized cost and travel cost, respectively\n",
     "    c_estimated=pd.DataFrame(columns=('t'+str(i) for i in range(2*tao+1)))\n",
     "    c_cs=pd.DataFrame(columns=('t'+str(i) for i in range(2*tao+1)))\n",
-    "    T_diff=np.array(T_estimated_diff)\n",
-    "    SD=schedule_delay(T_diff)\n",
     "    for j in range(2*tao+1):\n",
     "        c_estimated['t'+str(j)]=alpha*(T_estimated['t'+str(j)]+SD[:,j])+\\\n",
     "        price[d]*custgauss(all_time_slot['t'+str(j)],**params)*np.array(vehicle_information['origin_tl'])*0.0002\n",
     "\n",
     "        c_cs['t'+str(j)]=alpha*(T_estimated['t'+str(j)]+SD[:,j])\n",
     "\n",
+    "    # update the generalized cost using historical information\n",
     "    if d==0:\n",
     "        c_perceived=c_estimated\n",
     "    else:\n",
     "        c_perceived=omega*c_perceived+(1-omega)*c_estimated\n",
+    "    \n",
+    "    # compute the convergence indicator: the L1 norm\n",
     "    norm_list.append(np.linalg.norm(c_perceived-c_estimated,ord=1)/Number_of_user)\n",
     "    theta=5*10**(-1) #scale parameter\n",
     "\n",
+    "    # update the credit price\n",
     "    acco.append(sum(account_state[d]))\n",
     "    if Base_Case:\n",
     "        price=np.append(price,0)\n",
@@ -427,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Number of bought and sold credits"
+    "### Number of bought and sold credits, value of used credits"
    ]
   },
   {
@@ -440,7 +503,11 @@
     "sell=[]\n",
     "for i in range(Sim_day):\n",
     "    buy.append(-sum(account_state[i][account_state[i]<=0]))\n",
-    "    sell.append(sum(account_state[i][account_state[i]>0]))"
+    "    sell.append(sum(account_state[i][account_state[i]>0]))\n",
+    "    \n",
+    "used=[]\n",
+    "for i in range(Sim_day):\n",
+    "    used.append(sum(I-account_state[i])*price[i])"
    ]
   },
   {
@@ -590,9 +657,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
